--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,14 +1,11 @@
 project:
-  type: manuscript
+  type: website
 
-format:
-  html:
-    toc: true
-    comments:
-      hypothesis: true
-  docx: default
-  jats: default
-  agu-pdf: default
+website:
+  title: "My Quarto Project"
+  navbar:
+    left:
+      - href: index.html
+        text: "Home"
 
-
-
+# Pas de format à ce niveau, il est configuré dans le fichier Qmd ou le Notebook
