--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,10 +2,16 @@ project:
   type: website
 
 website:
-  title: "My Quarto Project"
+  title: "Votre Titre"
   navbar:
     left:
-      - href: /_site/index.html
-        text: "Home"
+      - text: "Home"
+        href: /_site/index.html
+    right:
+      - icon: github
+        href: https://github.com/WolfPackStatMathieu/tuto_quarto_article.git
 
-# Pas de format à ce niveau, il est configuré dans le fichier Qmd ou le Notebook
+format:
+  html:
+    toc: true
+    number-sections: true
